--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">anterio</span>
+            <span class="visually-hidden">anterior</span>
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -68,9 +68,31 @@
         <ul class="materiasLi">
           <li class="l1"><img src="./img/atom.png" width="100px" height="auto" alt="imgMedicina"><h3>Medicina</h3></li>
           <li class="l2"><img src="./img/atom.png" width="100px" height="auto" alt="imgInge"><h3>Ingenierias</h3></li>
-          <li class="l3"><img src="./img/atom.png" width="100px" height="auto" alt="imgOdont"><h3>Odontoligía</h3></li>
+          <li class="l3"><img src="./img/atom.png" width="100px" height="auto" alt="imgOdont"><h3>Odontología</h3></li>
         </ul>
       </div>
+      <div class="venta">
+        <h2 class="h2Venta">Libros que tenemos en venta:</h2>
+        <ul class="listaVenta">
+          <li class="l1"><a href="https//www.mercadopago.com"><img src="./img/9789701072363.png" width="100px" height="auto" alt="libroIng">Matematica Discreta<h4>Precio: $2000 (ARS)</h4></li></a>
+              <li class="l1"><a href="https//www.mercadopago.com"><img src="./img/libroQuimica.jpeg" width="100px" height="auto" alt="LibroMed">Quimica General <h4>Precio: $2800 (ARS)</h4></li></a>
+        </ul>
+      </div>
+      <footer>
+        <div class="footer">
+          <img src="./img/Rulo Caba.png" alt="logo" width="150px" height="auto" style="border-radius: 30px;">
+        </div>
+          <ul class="redes">
+            <li><a href="https://www.tiktok.com/@rulocaba"><img src="./img/tiktok-icon2.png" alt="tikTok" width="50px" height="auto" style="margin-top:5px; border-radius: 10px;"></li></a>
+            <li><a href="https://www.instagram.com/rulocaba/"><img src="./img/logotipo-de-instagram.png" alt="ig" width="60px" height="auto"></li></a>
+            <li><a href="https://twitter.com/aulacentro1"><img src="./img/twitterIcon.png" alt="tw" width="70px" height="auto" style="margin-top:-9px;"></li></a>
+            <li><a href="https://twitter.com/aulacentro1"><img src="./img/ytLogo.png" alt="tw" width="70px" height="auto"></li></a>
+          </ul>
+          <div class="redes">
+            <a href="#"><p>Contacto</p></a>
+            <a href="#"><p>Ubicacion</p></a>
+          </div>
+          </footer>
     </body>
     <!-- <script src="./js/script.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
