--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <div class="venta">
         <h2 class="h2Venta">Libros que tenemos en venta:</h2>
         <ul class="listaVenta">
-          <li class="l1"><a href="https//www.mercadopago.com"><img src="./img/9789701072363.png" width="100px" height="auto" alt="libroIng">Matematica Discreta<h4>Precio: $2000 (ARS)</h4></li></a>
-              <li class="l1"><a href="https//www.mercadopago.com"><img src="./img/libroQuimica.jpeg" width="100px" height="auto" alt="LibroMed">Quimica General <h4>Precio: $2800 (ARS)</h4></li></a>
+          <li class="l1"><a href="https://mpago.la/27oMQr4"><img src="./img/9789701072363.png" width="100px" height="auto" alt="libroIng">Matematica Discreta<h4>Precio: $2000 (ARS)</h4></li></a>
+              <li class="l1"><a href="https://mpago.la/27oMQr4"><img src="./img/libroQuimica.jpeg" width="100px" height="auto" alt="LibroMed">Quimica General <h4>Precio: $2800 (ARS)</h4></li></a>
         </ul>
       </div>
       <footer>
