--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <li><a href="https://www.tiktok.com/@rulocaba"><img src="./img/tiktok-icon2.png" alt="tikTok" width="50px" height="auto" style="margin-top:5px; border-radius: 10px;"></li></a>
             <li><a href="https://www.instagram.com/rulocaba/"><img src="./img/logotipo-de-instagram.png" alt="ig" width="60px" height="auto"></li></a>
             <li><a href="https://twitter.com/aulacentro1"><img src="./img/twitterIcon.png" alt="tw" width="70px" height="auto" style="margin-top:-9px;"></li></a>
-            <li><a href="https://twitter.com/aulacentro1"><img src="./img/ytLogo.png" alt="tw" width="70px" height="auto"></li></a>
+            <li><a href="https://www.youtube.com/c/RuloCaba1"><img src="./img/ytLogo.png" alt="tw" width="70px" height="auto"></li></a>
           </ul>
           <div class="redes">
             <a href="#"><p>Contacto</p></a>
