--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="./sass/style.css">
   <link rel="shortcut icon" href="./img/XpxXdhVq_400x400.jpg" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body id="body">
   <nav class="navbar navbar-expand-lg w-100">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" href="index.html"><img src="./img/XpxXdhVq_400x400.jpg" class="logoNav" alt="icon" width="100px" height="auto"></a>
+      <a class="navbar-brand text-white" href="index.html"><img src="./img/ruloCaba.png" class="logoNav" alt="icon" width="100px" height="auto"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,18 +28,18 @@
             <a class="nav-link text-white" href="./pages/videos.html">Videos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Documentos</a>
+            <a class="nav-link text-white" id="documentacion" href="#">Documentos</a>
           </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#"//./singup.php//>Ver Mas</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#"//./singup.php//>Ver Mas</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
       <div class="text-1"><h1>Bienvenido a Rulo Caba</h1></div>
       <div class="carrousel">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -66,36 +67,40 @@
       <div class="materias">
         <h2>Realizamos ingresos de:</h2>
         <ul class="materiasLi">
-          <li class="l1"><img src="./img/atom.png" width="100px" height="auto" alt="imgMedicina"><h3>Medicina</h3></li>
-          <li class="l2"><img src="./img/atom.png" width="100px" height="auto" alt="imgInge"><h3>Ingenierias</h3></li>
-          <li class="l3"><img src="./img/atom.png" width="100px" height="auto" alt="imgOdont"><h3>Odontología</h3></li>
+          <li class="l1"><img src="./img/medicina.jpg" width="150px" height="auto" alt="imgMedicina"><h3>Medicina</h3></li>
+          <li class="l2"><img src="./img/Ingenieria-.jpg" width="150px" height="auto" alt="imgInge"><h3>Ingenierias</h3></li>
+          <li class="l3"><img src="./img/odontologia.jpg" width="150px" height="auto" alt="imgOdont"><h3>Odontología</h3></li>
         </ul>
       </div>
       <div class="venta">
         <h2 class="h2Venta">Libros que tenemos en venta:</h2>
         <ul class="listaVenta">
           <li class="l1"><a href="https://mpago.la/27oMQr4"><img src="./img/9789701072363.png" width="100px" height="auto" alt="libroIng">Matematica Discreta<h4>Precio: $2000 (ARS)</h4></li></a>
-              <li class="l1"><a href="https://mpago.la/27oMQr4"><img src="./img/libroQuimica.jpeg" width="100px" height="auto" alt="LibroMed">Quimica General <h4>Precio: $2800 (ARS)</h4></li></a>
+          <li class="l1"><a href="https://mpago.la/27oMQr4"><img src="./img/libroQuimica.jpeg" width="100px" height="auto" alt="LibroMed">Quimica General <h4>Precio: $2800 (ARS)</h4></li></a>
+        </ul>
+        <h2 class="h2Venta">Cursos:</h2>
+        <ul class="listaVenta">
+          <li class="l1"><a href="#"><img src="./img/matematicaCursos.png" alt="matematicaCursos"></li></a>
+          <li class="l1"><a href="#"><img src="./img/FisicaCursos.png" alt="FisicaCursos"></li></a>
+          <li class="l1"><a href="#"><img src="./img/quimicaImagen.jpg" alt="QuimicaCursos" width="100px" height="auto"></li></a>
         </ul>
       </div>
       <footer>
         <div class="footer">
-          <img src="./img/Rulo Caba.png" alt="logo" width="150px" height="auto" style="border-radius: 30px;">
+          <img src="./img/ruloCaba.png" alt="logo" width="130px" height="auto" style="border-radius: 30px;">
         </div>
-          <ul class="redes">
-            <li><a href="https://www.tiktok.com/@rulocaba"><img src="./img/tiktok-icon2.png" alt="tikTok" width="50px" height="auto" style="margin-top:5px; border-radius: 10px;"></li></a>
-            <li><a href="https://www.instagram.com/rulocaba/"><img src="./img/logotipo-de-instagram.png" alt="ig" width="60px" height="auto"></li></a>
-            <li><a href="https://twitter.com/aulacentro1"><img src="./img/twitterIcon.png" alt="tw" width="70px" height="auto" style="margin-top:-9px;"></li></a>
-            <li><a href="https://www.youtube.com/c/RuloCaba1"><img src="./img/ytLogo.png" alt="tw" width="70px" height="auto"></li></a>
-          </ul>
-          <div class="redes">
-            <a href="#"><p>Contacto</p></a>
-            <a href="#"><p>Ubicacion</p></a>
-          </div>
-          </footer>
+        <ul class="redes">
+          <li><a href="https://www.tiktok.com/@rulocaba"><img src="./img/tiktok-icon2.png" alt="tikTok" width="50px" height="auto" style="margin-top:5px; border-radius: 10px;"></li></a>
+          <li><a href="https://www.instagram.com/rulocaba/"><img src="./img/logotipo-de-instagram.png" alt="ig" width="60px" height="auto"></li></a>
+          <li><a href="https://twitter.com/aulacentro1"><img src="./img/twitterIcon.png" alt="tw" width="70px" height="auto" style="margin-top:-9px;"></li></a>
+          <li><a href="https://www.youtube.com/c/RuloCaba1"><img src="./img/ytLogo.png" alt="tw" width="70px" height="auto"></li></a>
+        </ul>
+        <div class="redes">
+          <a href="#"><p>Contacto</p></a>
+          <a href="#"><p>Ubicacion</p></a>
+        </div>
+      </footer>
+      <script src="./js/script.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
-    <!-- <script src="./js/script.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
-    
     </html>
