--- a/pages/videos.html
+++ b/pages/videos.html
@@ -7,9 +7,8 @@
     <title>Videos</title>
     <link rel="stylesheet" href="../sass/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="../js/script2.js"></script>
-</head>
-<body id="body2">
+  </head>
+  <body id="body2">
   <nav class="navbar navbar-expand-lg w-100">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="../index.html"><img src="../img/XpxXdhVq_400x400.jpg" class="logoNav" alt="icon" width="100px" height="auto"></a>
@@ -20,26 +19,28 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active text-white" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="./pages/videos.html">Videos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Documentos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#"//./singup.php//>Ver Mas</a>
-            </li>
-          </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="./pages/videos.html">Videos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Documentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#"//./singup.php//>Ver Mas</a>
+          </li>
+        </ul>
         </div>
       </div>
     </nav>
     <div id="videos">
-      <div id="listaVideos"></div>
+      <div id="listaVideos">
+      </div>
     </div>
-    </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</html>
+  </body>
+  <script src="../js/script2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  </html>
