--- a/pages/videos.html
+++ b/pages/videos.html
@@ -11,7 +11,7 @@
   <body id="body2">
   <nav class="navbar navbar-expand-lg w-100">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" href="../index.html"><img src="../img/XpxXdhVq_400x400.jpg" class="logoNav" alt="icon" width="100px" height="auto"></a>
+      <a class="navbar-brand text-white" href="../index.html"><img src="../img/ruloCaba.png" class="logoNav" alt="icon" width="100px" height="auto"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
