--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link text-white" id="documentacion" href="#">Documentos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contacto</a>
+            <a class="nav-link text-white" href="./pages/contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#"//./singup.php//>Ver Mas</a>
@@ -80,9 +80,9 @@
         </ul>
         <h2 class="h2Venta">Cursos:</h2>
         <ul class="listaVenta">
-          <li class="l1"><a href="#"><img src="./img/matematicaCursos.png" alt="matematicaCursos"></li></a>
-          <li class="l1"><a href="#"><img src="./img/FisicaCursos.png" alt="FisicaCursos"></li></a>
-          <li class="l1"><a href="#"><img src="./img/quimicaImagen.jpg" alt="QuimicaCursos" width="100px" height="auto"></li></a>
+          <li class="l1"><a href="#"><img src="./img/matematicaCursos.png" alt="matematicaCursos" style="border-radius: 10px;"></li></a>
+          <li class="l1"><a href="#"><img src="./img/FisicaCursos.png" alt="FisicaCursos" style="border-radius: 10px;"></li></a>
+          <li class="l1"><a href="#"><img src="./img/quimicaImagen.jpg" alt="QuimicaCursos" width="100px" height="auto"style="border-radius: 10px;"></li></a>
         </ul>
       </div>
       <footer>
