--- a/pages/videos.html
+++ b/pages/videos.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos</title>
+    <title>Videos - Rulo Caba</title>
     <link rel="stylesheet" href="../sass/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <meta name="description" content="Instituto de inresos a facultades de medicina e inegnierias. Ubicado en Mendoza">
+    <meta name="keywords" content="Ingresos, inegnierias, Medicina, Universidad, UTN, Universidad de Cuyo, Ingreso facultad; ">
+    <link rel="shortcut icon" href="../img/ruloCaba.png" type="image/x-icon">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body id="body2">
   <nav class="navbar navbar-expand-lg w-100">
@@ -24,10 +28,10 @@
             <a class="nav-link text-white" href="./pages/videos.html">Videos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Documentos</a>
+            <a class="nav-link text-white" id="documentacion" href="#">Documentos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contacto</a>
+            <a class="nav-link text-white" href="./contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#"//./singup.php//>Ver Mas</a>
@@ -40,7 +44,23 @@
       <div id="listaVideos">
       </div>
     </div>
+    <footer>
+      <div class="footer">
+        <img src="../img/ruloCaba.png" alt="logo" width="130px" height="auto" style="border-radius: 30px;">
+      </div>
+      <ul class="redes">
+        <li><a href="https://www.tiktok.com/@rulocaba"><img src="../img/tiktok-icon2.png" alt="tikTok" width="50px" height="auto" style="margin-top:5px; border-radius: 10px;"></li></a>
+        <li><a href="https://www.instagram.com/rulocaba/"><img src="../img/logotipo-de-instagram.png" alt="ig" width="60px" height="auto"></li></a>
+        <li><a href="https://twitter.com/aulacentro1"><img src="../img/twitterIcon.png" alt="tw" width="70px" height="auto" style="margin-top:-9px;"></li></a>
+        <li><a href="https://www.youtube.com/c/RuloCaba1"><img src="../img/ytLogo.png" alt="tw" width="70px" height="auto"></li></a>
+      </ul>
+      <div class="redes">
+        <a href="../pages/contacto.html"><p>Contacto</p></a>
+        <a href="#"><p>Ubicacion</p></a>
+      </div>
+    </footer>
   </body>
+  <script src="../js/script.js"></script>
   <script src="../js/script2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </html>
